# TradingAgents

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: market-agent.ipynb
