[project]
name = "tradingagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "dotenv>=0.9.9",
    "edgartools>=4.12.2",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "pydantic>=2.11.9",
    "rich>=14.1.0",
    "typer>=0.17.4",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "edgartools[llm-full]>=4.12.2",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
]
